// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure adapter can be constructed WITH attributes 1`] = `
Object {
  "modelState": Object {
    "alt": "An image",
    "height": null,
    "size": "small",
    "textGroup": TextGroup {
      "dataTemplate": Object {
        "align": "left",
        "indent": 0,
      },
      "items": Array [
        TextGroupItem {
          "data": Object {
            "align": "left",
            "indent": 0,
          },
          "parent": [Circular],
          "text": StyleableText {
            "styleList": ChunkStyleList {
              "styles": Array [],
            },
            "value": "",
          },
        },
      ],
      "maxItems": 1,
    },
    "url": "http://website.com/image.jpg",
    "width": null,
  },
}
`;

exports[`Figure adapter can be constructed WITHOUT attributes 1`] = `
Object {
  "modelState": Object {
    "alt": null,
    "height": null,
    "size": "small",
    "textGroup": TextGroup {
      "dataTemplate": Object {
        "align": "left",
        "indent": 0,
      },
      "items": Array [
        TextGroupItem {
          "data": Object {
            "align": "left",
            "indent": 0,
          },
          "parent": [Circular],
          "text": StyleableText {
            "styleList": ChunkStyleList {
              "styles": Array [],
            },
            "value": "",
          },
        },
      ],
      "maxItems": 1,
    },
    "url": null,
    "width": null,
  },
}
`;
